<resources>
    <string name="app_name">Instagram Project</string>

    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="network_login_again">Please log in again</string>


    <!--login-->
    <string name="email_field_hint">Enter your email</string>
    <string name="password_field_hint">Enter your password</string>
    <string name="email_field_empty">Email can\'t be empty</string>
    <string name="password_field_empty">Password can\'t be empty</string>
    <string name="email_field_invalid">Not a valid email</string>
    <string name="password_field_small_length">Password less than 6 digits</string>
    <string name="login_button_text">Login</string>

    <!--signup-->
    <string name="name_field_hint">Enter your full name</string>
    <string name="signup_button_text">SIGN UP</string>
    <string name="signup_password_field_hint">Choose your password</string>
    <string name="sign_up_with_email">Sign Up With Email</string>
    <string name="name_field_empty">Name can\'t be empty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_add_photos">Photo</string>
    <string name="menu_profile">Profile</string>

    <!--posts-->
    <string name="post_like_label">%1d Likes</string>
    <string name="menu_home">Home</string>
    <string name="user_post_likes_label">%1d users liked this post</string>

    <!--profile-->
    <string name="user_image">User Image</string>
    <string name="logout">Logout</string>
    <string name="post_number_label">%1d Posts</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_photo">Change Photo</string>
    <string name="bio_field_hint">Bio</string>
    <string name="name_hint">Name</string>
    <string name="private_information_label">Private Information</string>
    <string name="email_hint">Email</string>
    <string name="try_again">Something went wrong Try Again</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="image_post_description">Image Post</string>
    <string name="night_mode">Mode</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="system_default_menu">Default</string>
    <string name="light_menu">Light</string>
    <string name="dark_menu">Dark</string>
    <string name="apply_menu">Apply</string>
    <string name="cancel_menu">Cancel</string>
    <string name="share">Share</string>
    <string name="submit">Submit</string>

    <string name="returned_from_app_settings_to_activity">
        Returned from app settings to MainActivity with the following permissions:
        \n\nWrite: %s
    </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="rationale_read">This app needs to access your reading permission</string>

</resources>
