<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"

    >

    <TextView
        android:id="@+id/tvHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_settings"
        style="@style/AppTheme.Headline6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvHead"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        >

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_default_menu"
            style="@style/AppTheme.Body1"
            android:id="@+id/rbSystemDefault"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_menu"
            style="@style/AppTheme.Body1"
            android:id="@+id/rbLight"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_menu"
            style="@style/AppTheme.Body1"
            android:id="@+id/rbDark"
            />

    </RadioGroup>


    <TextView
        style="@style/AppTheme.Body1"
        android:id="@+id/tvApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/apply_menu"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="5dp"
        />

    <TextView
        style="@style/AppTheme.Body1"
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvApply"
        android:text="@string/cancel_menu"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        />






</androidx.constraintlayout.widget.ConstraintLayout>