<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.editprofile.EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1"
        android:id="@+id/appBarLayout"
        >
        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_close"
            android:layout_marginStart="16dp"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_weight="0.6"
            android:layout_gravity="center"
            />

        <ImageView
            android:id="@+id/ivTick"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_tick"
            android:layout_marginStart="16dp"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            />
    </LinearLayout>

    <View

        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/shadow"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"/>

    <ImageView
        android:id="@+id/ivProfilePhoto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_profile_add_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tvChangePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivProfilePhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/change_photo"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:layout_marginBottom="8dp"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/tvChangePhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLength="250"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bio_field_hint"
        android:layout_marginBottom="8dp"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/layout_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/viewShadow"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/shadow"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_bio"/>

    <TextView
        android:id="@+id/tv_pvt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewShadow"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/private_information_label"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:layout_marginBottom="8dp"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/tv_pvt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:enabled="false"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"
        android:visibility="gone"
        />





</androidx.constraintlayout.widget.ConstraintLayout>